--- a/app/views/proponents/index.html.erb
+++ b/app/views/proponents/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="h3">Proponentes</h1>
-    <%= link_to 'Novo', new_proponent_path, class: 'btn btn-primary' %>
+    <%= link_to 'Novo', new_proponent_path, class: 'btn btn-primary', data: {turbo: false} %>
   </div>
 
   <table class="table table-striped table-hover">
